--- a/resources/css/preview.scss
+++ b/resources/css/preview.scss
@@ -31,3 +31,10 @@ h3 {
 #section-links a:active {
     color:forestgreen;
 }
+
+// show required asterisk
+label.required::after {
+    content: '*';
+    color:red;
+    margin-left:0.5em;
+}
