refactor of traits

--- a/resources/css/preview.scss
+++ b/resources/css/preview.scss
@@ -16,6 +16,12 @@ h3 {
     margin-bottom:1em;
 }
 
+h4 {
+    color:darkblue;
+    margin-top:1em;
+    margin-bottom:1em;
+}
+
 #section-links a {
     color:darkgreen;
 }
