added button help text and tests added icons component

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -2,3 +2,13 @@ body {
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
 }
+
+.input-group-icon img {
+    max-width:1em;
+    max-height:1em;
+}
+
+.input-group-icon svg {
+    max-width:1em;
+    max-height:1em;
+}
