--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -3,6 +3,9 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.input-group-icon {
+    fill:red;
+}
 .input-group-icon img {
     max-width:1em;
     max-height:1em;
@@ -11,4 +14,20 @@ body {
 .input-group-icon svg {
     max-width:1em;
     max-height:1em;
+}
+
+.input-group-icon-sprite {
+    //width:20px;
+    //height:20px;
+    color:blue;
+    fill: darkgreen;
+}
+
+.input-group-icon-sprite svg {
+    overflow: visible
+}
+
+.svg-icon {
+    fill:green;
+    stroke:red;
 }
