added styling to local repository badge.

--- a/resources/css/preview.scss
+++ b/resources/css/preview.scss
@@ -101,3 +101,10 @@ label.required::after {
 //        $white, $on-secondary, $on-secondary);
 //}
 
+.mlbrgn-badge-local-package {
+    font-weight: bold;
+    color:red;
+    border:1px solid #ccc;
+    padding: 0.25em;
+}
+
