--- a/resources/css/preview.scss
+++ b/resources/css/preview.scss
@@ -108,3 +108,10 @@ label.required::after {
     padding: 0.25em;
 }
 
+.mlbrgn-badge-remote-package {
+    font-weight: bold;
+    color:blue;
+    border:1px solid #ccc;
+    padding: 0.25em;
+}
+
